{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 462,
  "lineage": "a5321167-f2d8-df99-fc6f-4445ff1929a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0232f9e7395aa3dcc",
            "arn": "arn:aws:ec2:us-east-1:663958378887:elastic-ip/eipalloc-0232f9e7395aa3dcc",
            "association_id": "eipassoc-020973f3d6eee3473",
            "domain": "vpc",
            "id": "eipalloc-0232f9e7395aa3dcc",
            "instance": "i-0212d8e9887160cd2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0864f2979ee78d21c",
            "private_dns": "ip-10-0-0-238.ec2.internal",
            "private_ip": "10.0.0.238",
            "public_dns": "ec2-18-209-216-242.compute-1.amazonaws.com",
            "public_ip": "18.209.216.242",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-bastion-eip"
            },
            "tags_all": {
              "Name": "techcorp-bastion-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0628b942d2e89e2b0",
            "arn": "arn:aws:ec2:us-east-1:663958378887:elastic-ip/eipalloc-0628b942d2e89e2b0",
            "domain": "vpc",
            "id": "eipalloc-0628b942d2e89e2b0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-73-115-206.compute-1.amazonaws.com",
            "public_ip": "52.73.115.206",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-nat-eip-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-eip-1"
            }
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dbf3a2c3563bb36",
            "arn": "arn:aws:ec2:us-east-1:663958378887:elastic-ip/eipalloc-01dbf3a2c3563bb36",
            "domain": "vpc",
            "id": "eipalloc-01dbf3a2c3563bb36",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-145-40-77.compute-1.amazonaws.com",
            "public_ip": "54.145.40.77",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-nat-eip-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-eip-2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f989e78a92d5f420",
            "arn": "arn:aws:ec2:us-east-1:663958378887:instance/i-0212d8e9887160cd2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0212d8e9887160cd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0864f2979ee78d21c"
              }
            ],
            "primary_network_interface_id": "eni-0864f2979ee78d21c",
            "private_dns": "ip-10-0-0-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.238",
            "public_dns": "ec2-100-53-108-207.compute-1.amazonaws.com",
            "public_ip": "100.53.108.207",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09dcc10f4af16286a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b487af5fa34d6d12",
            "tags": {
              "Name": "techcorp-bastion"
            },
            "tags_all": {
              "Name": "techcorp-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012ae91726a0107f9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "i-0212d8e9887160cd2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f989e78a92d5f420",
            "arn": "arn:aws:ec2:us-east-1:663958378887:instance/i-0922c205cd0459b57",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0922c205cd0459b57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "my-new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b4908a2e5f14c253"
              }
            ],
            "primary_network_interface_id": "eni-0b4908a2e5f14c253",
            "private_dns": "ip-10-0-2-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.8",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e68e0d9db3f50ca6",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0637671ea969a074a",
            "tags": {
              "Name": "techcorp-db-server"
            },
            "tags_all": {
              "Name": "techcorp-db-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c70ce2330640aa84"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "i-0922c205cd0459b57",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f989e78a92d5f420",
            "arn": "arn:aws:ec2:us-east-1:663958378887:instance/i-0e7c1a906b3f82a9a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7c1a906b3f82a9a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07f783aa7c44da0de"
              }
            ],
            "primary_network_interface_id": "eni-07f783aa7c44da0de",
            "private_dns": "ip-10-0-2-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.186",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008603dba0f28260b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0637671ea969a074a",
            "tags": {
              "Name": "techcorp-web-1"
            },
            "tags_all": {
              "Name": "techcorp-web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b1f7e3140dfb420"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "i-0e7c1a906b3f82a9a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f989e78a92d5f420",
            "arn": "arn:aws:ec2:us-east-1:663958378887:instance/i-0822078b450aa7e91",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0822078b450aa7e91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-new-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-082db481ce1f52b9f"
              }
            ],
            "primary_network_interface_id": "eni-082db481ce1f52b9f",
            "private_dns": "ip-10-0-3-117.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.117",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ded1612dd9e094a4",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4e4bd03930f6134",
            "tags": {
              "Name": "techcorp-web-2"
            },
            "tags_all": {
              "Name": "techcorp-web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b1f7e3140dfb420"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "i-0822078b450aa7e91",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:internet-gateway/igw-0cdfe6a143df8105f",
            "id": "igw-0cdfe6a143df8105f",
            "owner_id": "663958378887",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-igw"
            },
            "tags_all": {
              "Name": "techcorp-igw"
            },
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:loadbalancer/app/techcorp-alb/589f9c23c9937a9d",
            "arn_suffix": "app/techcorp-alb/589f9c23c9937a9d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorp-alb-761506570.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:663958378887:loadbalancer/app/techcorp-alb/589f9c23c9937a9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorp-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-01c99f2dfa9060aba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d567538906ba3ef"
              },
              {
                "subnet_id": "subnet-0b487af5fa34d6d12"
              }
            ],
            "subnets": [
              "subnet-03d567538906ba3ef",
              "subnet-0b487af5fa34d6d12"
            ],
            "vpc_id": "vpc-0d15c75bdfa2b3db8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:loadbalancer/app/techcorp-alb/589f9c23c9937a9d"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:listener/app/techcorp-alb/589f9c23c9937a9d/08f13f5b56320968",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:663958378887:listener/app/techcorp-alb/589f9c23c9937a9d/08f13f5b56320968",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:loadbalancer/app/techcorp-alb/589f9c23c9937a9d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:listener/app/techcorp-alb/589f9c23c9937a9d/08f13f5b56320968"
          },
          "dependencies": [
            "aws_lb.web_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318",
            "arn_suffix": "targetgroup/web-target-group/afe8395a29819318",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318,i-0e7c1a906b3f82a9a,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318",
            "target_id": "i-0e7c1a906b3f82a9a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318",
            "target_id": "i-0e7c1a906b3f82a9a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_instance.web",
            "aws_lb_target_group.web_tg",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318,i-0822078b450aa7e91,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318",
            "target_id": "i-0822078b450aa7e91"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:663958378887:targetgroup/web-target-group/afe8395a29819318",
            "target_id": "i-0822078b450aa7e91"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_instance.web",
            "aws_lb_target_group.web_tg",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table_association.private",
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0628b942d2e89e2b0",
            "association_id": "eipassoc-01fea9add5ea1cfaa",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e4f62b6e48e66fba",
            "network_interface_id": "eni-0cb5db4bf2b54fa1c",
            "private_ip": "10.0.0.87",
            "public_ip": "52.73.115.206",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b487af5fa34d6d12",
            "tags": {
              "Name": "techcorp-nat-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-1"
            },
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dbf3a2c3563bb36",
            "association_id": "eipassoc-02f3f92891d725792",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0065f17f66261b5dd",
            "network_interface_id": "eni-0dad058d7f2063732",
            "private_ip": "10.0.1.245",
            "public_ip": "54.145.40.77",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d567538906ba3ef",
            "tags": {
              "Name": "techcorp-nat-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-2"
            },
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:route-table/rtb-0cf29e7df64c22e66",
            "id": "rtb-0cf29e7df64c22e66",
            "owner_id": "663958378887",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e4f62b6e48e66fba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-1"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "rtb-0cf29e7df64c22e66",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:route-table/rtb-049143a14e7925290",
            "id": "rtb-049143a14e7925290",
            "owner_id": "663958378887",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0065f17f66261b5dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-2"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "rtb-049143a14e7925290",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:route-table/rtb-073bff049b6301a1f",
            "id": "rtb-073bff049b6301a1f",
            "owner_id": "663958378887",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdfe6a143df8105f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-public-rt"
            },
            "tags_all": {
              "Name": "techcorp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "rtb-073bff049b6301a1f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0448e5932ca62867f",
            "region": "us-east-1",
            "route_table_id": "rtb-0cf29e7df64c22e66",
            "subnet_id": "subnet-0637671ea969a074a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fb63cc65c8ca036",
            "region": "us-east-1",
            "route_table_id": "rtb-049143a14e7925290",
            "subnet_id": "subnet-0d4e4bd03930f6134"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fde7f93539ab6f7",
            "region": "us-east-1",
            "route_table_id": "rtb-073bff049b6301a1f",
            "subnet_id": "subnet-0b487af5fa34d6d12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c46749dbff3169e3",
            "region": "us-east-1",
            "route_table_id": "rtb-073bff049b6301a1f",
            "subnet_id": "subnet-03d567538906ba3ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:security-group/sg-01c99f2dfa9060aba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c99f2dfa9060aba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "663958378887",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "sg-01c99f2dfa9060aba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:security-group/sg-012ae91726a0107f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012ae91726a0107f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.89.40.149/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "663958378887",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "sg-012ae91726a0107f9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:security-group/sg-0c70ce2330640aa84",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c70ce2330640aa84",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-012ae91726a0107f9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b1f7e3140dfb420"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "663958378887",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "sg-0c70ce2330640aa84",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:security-group/sg-07b1f7e3140dfb420",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b1f7e3140dfb420",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-012ae91726a0107f9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c99f2dfa9060aba"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "663958378887",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "sg-07b1f7e3140dfb420",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:subnet/subnet-0637671ea969a074a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0637671ea969a074a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663958378887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-private-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-1"
            },
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "subnet-0637671ea969a074a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:subnet/subnet-0d4e4bd03930f6134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4e4bd03930f6134",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663958378887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-private-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-2"
            },
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "subnet-0d4e4bd03930f6134",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:subnet/subnet-0b487af5fa34d6d12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b487af5fa34d6d12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663958378887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-public-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-1"
            },
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "subnet-0b487af5fa34d6d12",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:subnet/subnet-03d567538906ba3ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d567538906ba3ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663958378887",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-public-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-2"
            },
            "vpc_id": "vpc-0d15c75bdfa2b3db8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "subnet-03d567538906ba3ef",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663958378887:vpc/vpc-0d15c75bdfa2b3db8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a6e536745ac87b5",
            "default_route_table_id": "rtb-0d332b378dbcede11",
            "default_security_group_id": "sg-0a489464d9960c550",
            "dhcp_options_id": "dopt-09321fb95e6fbea8c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d15c75bdfa2b3db8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d332b378dbcede11",
            "owner_id": "663958378887",
            "region": "us-east-1",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663958378887",
            "id": "vpc-0d15c75bdfa2b3db8",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}